latex files updated, pdf final paper update

--- a/latex/final-paper.bib
+++ b/latex/final-paper.bib
@@ -1,10 +1,27 @@
-@article{hochreiter1997long,
-  title={Long short-term memory},
-  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
-  journal={Neural computation},
-  volume={9},
-  number={8},
-  pages={1735--1780},
-  year={1997},
-  publisher={MIT Press}
+@MISC{WEBSITE:1,
+  HOWPUBLISHED = "\url{http://inventwithpython.com/pygame/chapter7.html}",
+  AUTHOR = "Al Sweigart",
+  TITLE = "Tetronimo",
+  NOTE = "Accessed in Nov. 2018"
+}
+
+@MISC{CODE:1,
+  HOWPUBLISHED = "Distribution code through Github",
+  AUTHOR = "CS182 Teaching Staff",
+  TITLE = "P3/reinforcement",
+  NOTE = "Accessed in Oct. 2018."
+}
+
+@MISC{CODE:2,
+  HOWPUBLISHED = "Distribution code through Github",
+  AUTHOR = "CS182 Teaching Staff",
+  TITLE = "P1/search",
+  NOTE = "Accessed in Sept. 2018."
+}
+
+@BOOK{CODE:3,
+  PUBLISHER = "MIT Press",
+  AUTHOR = "Sutton, Richard S, and Andrew G Barto.",
+  TITLE = "Reinforcement Learning:  An Introduction 2nd Edition",
+  YEAR = "2016."
 }
