update to keep final-paper.tex consistent with submission. Added markdown files

--- a/latex/final-paper.tex
+++ b/latex/final-paper.tex
@@ -186,7 +186,7 @@ We decided on these sets of feature combinations because we felt that it would b
     \includegraphics[scale=0.50]{heuristics.png}
 \end{center}
 
-In general, the feature 'aggregate height' seemed to produce better results than the 'highest point' feature, as evidenced by the superior performance of the agent when trained with feature sets 3 and 4. Intuitively, Most interestingly, feature set 2 produced the worst results, but feature set 4 produced the best, where the only difference between feature sets 2 and 4 is that the 'height' feature is highest point in set 2, and aggregate height in set 4. In other words, in the case we used the squared hole size heurtistic, we get the both the best and worst agent performances depending on which feature for 'height' we use.
+In general, the feature 'aggregate height' seemed to produce better results than the 'highest point' feature, as evidenced by the superior performance of the agent when trained with feature sets 3 and 4. Intuitively, Most interestingly, feature set 2 produced the worst results, but feature set 4 produced the best, where the only difference between feature sets 2 and 4 is that the 'height' feature is highest point in set 2, and aggregate height in set 4. In other words, in the case we used the squared hole size heuristic, we get the both the best and worst agent performances depending on which feature for 'height' we use.
 
 \subsubsection{Learning Parameters and Board Sizes}
 We mainly experimented with varying the learning parameters for $\alpha$ and $\epsilon$, while keeping $\gamma$ constant at a value of 1. The intuition behind this was that we wanted our agents to always be planning for the future as much as possible, since in tetris line clears do not happen after every single move. Training and testing agents took a very long time. Ideally, given more time, we would also like to experiment with varying our value of $\gamma$. We found that low values of $\alpha$ generally gave the best results. We think this may be the case because, again, line clears do not happen very often. Therefore, it is important to not "overwrite" old information at too fast a rate. We also experimented with different board sizes for our agents. We found that the exact learning agent performed worse on wider boards and better on taller boards. We think this may be the case because wider boards make it much harder to clear lines, while taller board allow the agent to stay alive for longer and thus clear more lines. Below are some graphs detailing our results:
